[gd_scene load_steps=12 format=3 uid="uid://ogo63q6fdc44"]

[ext_resource type="Script" path="res://scripts/levels/level.gd" id="1_1xb3k"]
[ext_resource type="PackedScene" uid="uid://cqlyq21dufm6" path="res://scenes/levels/catacomb.tscn" id="1_5w3yu"]
[ext_resource type="PackedScene" uid="uid://8ck7qe1n3awd" path="res://scenes/players/saber.tscn" id="2_5tl7t"]
[ext_resource type="PackedScene" uid="uid://n20hkt6h5ost" path="res://scenes/players/hayate.tscn" id="3_a7lok"]
[ext_resource type="PackedScene" uid="uid://ddwbitdru0pmb" path="res://scenes/other/fire_column.tscn" id="3_fhvlv"]
[ext_resource type="PackedScene" uid="uid://btpuw4f8qb17n" path="res://scenes/players/miko.tscn" id="4_tvhkt"]
[ext_resource type="PackedScene" uid="uid://bf8bhot6qwca1" path="res://scenes/other/moon_tower.tscn" id="4_yxx5g"]
[ext_resource type="PackedScene" uid="uid://uwslpr5x07yc" path="res://scenes/ui/health_bar.tscn" id="5_qyae3"]
[ext_resource type="Texture2D" uid="uid://dnrfemhit7nga" path="res://assets/Skins/Player skins/character icon/saber_icon.png" id="6_6ekkf"]
[ext_resource type="Texture2D" uid="uid://brocy360o801q" path="res://assets/Skins/Player skins/character icon/miko_icon.png" id="7_13v0c"]
[ext_resource type="Texture2D" uid="uid://cxcbeao47io3c" path="res://assets/Skins/Player skins/character icon/hayate_icon.png" id="8_1tv4t"]

[node name="level 2" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_1xb3k")

[node name="TileMap" parent="." instance=ExtResource("1_5w3yu")]
position = Vector2(-62, 62)
scale = Vector2(2, 2)

[node name="fire column" parent="TileMap" instance=ExtResource("3_fhvlv")]
position = Vector2(-335.5, -14)

[node name="fire column2" parent="TileMap" instance=ExtResource("3_fhvlv")]
position = Vector2(-335.5, 79)

[node name="MoonTower" parent="TileMap" instance=ExtResource("4_yxx5g")]
position = Vector2(863.5, -1.5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="health_bar" parent="CanvasLayer" node_paths=PackedStringArray("character") instance=ExtResource("5_qyae3")]
offset_left = 2.0
offset_top = 679.0
offset_right = -982.0
offset_bottom = -18.0
character = NodePath("../../hayate")

[node name="press_shoot_label" type="Label" parent="CanvasLayer"]
offset_left = 526.0
offset_top = 693.0
offset_right = 689.0
offset_bottom = 716.0
text = "Press Space To Shoot"

[node name="party_health_bars" type="Node" parent="CanvasLayer"]

[node name="saber_mini_health_bar" parent="CanvasLayer/party_health_bars" node_paths=PackedStringArray("character") instance=ExtResource("5_qyae3")]
offset_left = 960.0
offset_top = 109.0
offset_right = -13.0
offset_bottom = -601.0
character = NodePath("../../../saber")

[node name="miko_mini_health_bar" parent="CanvasLayer/party_health_bars" node_paths=PackedStringArray("character") instance=ExtResource("5_qyae3")]
offset_left = 960.0
offset_top = 62.0
offset_right = -13.0
offset_bottom = -648.0
character = NodePath("../../../miko")

[node name="hayate_mini_health_bar" parent="CanvasLayer/party_health_bars" node_paths=PackedStringArray("character") instance=ExtResource("5_qyae3")]
offset_left = 960.0
offset_top = 18.0
offset_right = -13.0
offset_bottom = -692.0
character = NodePath("../../../hayate")

[node name="saber_icon" type="Sprite2D" parent="CanvasLayer/party_health_bars"]
texture_filter = 1
position = Vector2(945, 117)
scale = Vector2(0.701612, 0.618664)
texture = ExtResource("6_6ekkf")

[node name="miko_icon" type="Sprite2D" parent="CanvasLayer/party_health_bars"]
texture_filter = 1
position = Vector2(940, 67)
scale = Vector2(0.630805, 0.556228)
texture = ExtResource("7_13v0c")

[node name="hayate_icon" type="Sprite2D" parent="CanvasLayer/party_health_bars"]
texture_filter = 1
position = Vector2(942, 26)
scale = Vector2(0.600808, 0.618664)
texture = ExtResource("8_1tv4t")

[node name="hayate" parent="." instance=ExtResource("3_a7lok")]
position = Vector2(899, 515)
collision_mask = 7

[node name="miko" parent="." instance=ExtResource("4_tvhkt")]
position = Vector2(159, -298)
collision_mask = 7

[node name="saber" parent="." instance=ExtResource("2_5tl7t")]
position = Vector2(-76, -267)
collision_mask = 7

[editable path="TileMap"]
[editable path="hayate"]
